# cross-site-request

./: Cargo.toml  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  webpack.config.js
fe-src/: index.html  index.js
src/: main.rs
