[package]
name = "cross-site-request"
version = "0.1.0"
authors = ["mishaszu <mishaszu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5"
env_logger = "*"
serde = "*"
serde_json = "*"
